[gd_scene load_steps=14 format=3 uid="uid://dulmpfagfjs2k"]

[ext_resource type="Script" uid="uid://d0s6ig5osvmvr" path="res://quest/ui/QuestSelectUI.gd" id="1_ubjuw"]
[ext_resource type="PackedScene" uid="uid://ufno3phdjrwy" path="res://quest/ui/QuestButton.tscn" id="2_3p2es"]
[ext_resource type="Script" uid="uid://bgec4w6jbjdjf" path="res://quest/ui/QuestInfoPanel.gd" id="3_1mbw8"]
[ext_resource type="Texture2D" uid="uid://bu4i6uwbeww7j" path="res://difficulty_atlas_texture_background.tres" id="4_niqkt"]
[ext_resource type="Texture2D" uid="uid://daysrbhdeip5v" path="res://difficulty_atlas_texture.tres" id="5_in1tt"]
[ext_resource type="PackedScene" uid="uid://cimbnhhermucy" path="res://characters/ui/PartySummaryUI.tscn" id="6_rx18j"]
[ext_resource type="Script" uid="uid://dm7nwvytq5g0y" path="res://quest/ui/QuestRewardsDisplay.gd" id="7_7b3j3"]
[ext_resource type="Texture2D" uid="uid://bhir43ek1ivf0" path="res://assets/icons/skull.png" id="7_cqabf"]
[ext_resource type="Script" uid="uid://muut3gmsg30f" path="res://items/ui/ItemsDisplayContainer.gd" id="8_nr7bh"]
[ext_resource type="PackedScene" uid="uid://wx5sih5dc80a" path="res://items/ui/ItemButtonDisplayDisabled.tscn" id="9_jin1d"]
[ext_resource type="Script" uid="uid://rnj4eogah0sp" path="res://quest/ui/QuestProgressPanel.gd" id="11_1mbw8"]

[sub_resource type="Theme" id="Theme_bmo6v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2cb01"]
atlas = ExtResource("7_cqabf")
region = Rect2(0, 0, 96, 0)

[node name="QuestSelectUI" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_bmo6v")
script = ExtResource("1_ubjuw")
quest_button_scene = ExtResource("2_3p2es")
pending_container_path = NodePath("QuestScrollContainer/MarginContainer/QuestVBoxContainer/PendingContainer")
new_container_path = NodePath("QuestScrollContainer/MarginContainer/QuestVBoxContainer/NewContainer")
active_container_path = NodePath("QuestScrollContainer/MarginContainer/QuestVBoxContainer/ActiveContainer")
completed_container_path = NodePath("QuestScrollContainer/MarginContainer/QuestVBoxContainer/CompletedContainer")

[node name="QuestScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="QuestScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="QuestVBoxContainer" type="VBoxContainer" parent="QuestScrollContainer/MarginContainer"]
layout_mode = 2

[node name="MinWidth" type="Control" parent="QuestScrollContainer/MarginContainer/QuestVBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="PendingContainer" type="VBoxContainer" parent="QuestScrollContainer/MarginContainer/QuestVBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="QuestScrollContainer/MarginContainer/QuestVBoxContainer/PendingContainer"]
layout_mode = 2
text = "COMPLETED QUESTS"

[node name="NewContainer" type="VBoxContainer" parent="QuestScrollContainer/MarginContainer/QuestVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="QuestScrollContainer/MarginContainer/QuestVBoxContainer/NewContainer"]
layout_mode = 2
text = "Available new quests:"

[node name="ActiveContainer" type="VBoxContainer" parent="QuestScrollContainer/MarginContainer/QuestVBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="QuestScrollContainer/MarginContainer/QuestVBoxContainer/ActiveContainer"]
layout_mode = 2
text = "Active quests:"

[node name="CompletedContainer" type="VBoxContainer" parent="QuestScrollContainer/MarginContainer/QuestVBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="QuestScrollContainer/MarginContainer/QuestVBoxContainer/CompletedContainer"]
layout_mode = 2
text = "Quest History:"

[node name="QuestProgressPanel" type="Panel" parent="." node_paths=PackedStringArray("quest_name_label", "quest_description_text", "quest_story_text", "quest_combat_log")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
script = ExtResource("11_1mbw8")
quest_name_label = NodePath("MarginContainer/ScrollContainer/VBoxContainer/QuestNameLabel")
quest_description_text = NodePath("MarginContainer/ScrollContainer/VBoxContainer/QuestDescriptionText")
quest_story_text = NodePath("MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestStory")
quest_combat_log = NodePath("MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestCombatLog")

[node name="MarginContainer" type="MarginContainer" parent="QuestProgressPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="QuestProgressPanel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="QuestProgressPanel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuestNameLabel" type="Label" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="QuestDescriptionText" type="Label" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="QuestInfoTabContainer" type="TabContainer" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="QuestRewardPanel" type="Panel" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer" node_paths=PackedStringArray("item_rewards_container", "currency_rewards_label", "debt_rewards_label", "quest_name_label", "quest_description_label")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("7_7b3j3")
item_rewards_container = NodePath("VBoxContainer/VBoxContainer/ItemRewardsContainer")
currency_rewards_label = NodePath("VBoxContainer/VBoxContainer/ItemRewardsContainer/CurrencyRewardsLabel")
debt_rewards_label = NodePath("VBoxContainer/VBoxContainer/ItemRewardsContainer/DebtRewardsLabel")
quest_name_label = NodePath("VBoxContainer/VBoxContainer/QuestNameLabel")
quest_description_label = NodePath("VBoxContainer/VBoxContainer/QuestDescriptionText")
metadata/_tab_index = 0

[node name="VBoxContainer" type="MarginContainer" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestRewardPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestRewardPanel/VBoxContainer"]
layout_mode = 2

[node name="QuestNameLabel" type="Label" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestRewardPanel/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="QuestDescriptionText" type="Label" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestRewardPanel/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="Label" type="Label" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestRewardPanel/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Item rewards"
horizontal_alignment = 1

[node name="ItemRewardsContainer" type="VBoxContainer" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestRewardPanel/VBoxContainer/VBoxContainer" node_paths=PackedStringArray("item_display_container")]
layout_mode = 2
script = ExtResource("8_nr7bh")
item_display_container = NodePath(".")

[node name="CurrencyRewardsLabel" type="Label" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestRewardPanel/VBoxContainer/VBoxContainer/ItemRewardsContainer"]
visible = false
layout_mode = 2
text = "0 gp"
horizontal_alignment = 1

[node name="DebtRewardsLabel" type="Label" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestRewardPanel/VBoxContainer/VBoxContainer/ItemRewardsContainer"]
layout_mode = 2
text = "0 gp"
horizontal_alignment = 1

[node name="CollectRewardsButton" type="Button" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestRewardPanel/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "COLLECT REWARDS"

[node name="QuestInfoPanel" type="Panel" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer" node_paths=PackedStringArray("quest_name_label", "quest_description_text_ui", "quest_rewards_display", "party_summary", "quest_difficulty_display")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_1mbw8")
quest_name_label = NodePath("MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/QuestNameLabel")
quest_description_text_ui = NodePath("MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/QuestDescriptionText")
quest_rewards_display = NodePath("MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/ScrollContainer/QuestRewardsDisplay")
party_summary = NodePath("MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/PartySummaryUI")
quest_difficulty_display = NodePath("MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/DifficultyBar")
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuestNameLabel" type="Label" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="QuestDescriptionText" type="Label" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DifficultyLabel" type="Label" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Difficulty"
horizontal_alignment = 1

[node name="DifficultyBar" type="TextureProgressBar" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
texture_repeat = 2
layout_mode = 2
step = 0.1
value = 100.0
texture_under = ExtResource("4_niqkt")
texture_progress = ExtResource("5_in1tt")

[node name="CenterContainer" type="CenterContainer" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="DeathsBar" type="TextureProgressBar" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
texture_repeat = 2
layout_mode = 2
max_value = 3.0
value = 1.0
rounded = true
texture_progress = SubResource("AtlasTexture_2cb01")

[node name="PartySummaryUI" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("6_rx18j")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
scroll_areas_enabled = false

[node name="RewardsLabel" type="Label" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Rewards"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuestRewardsDisplay" type="VBoxContainer" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/ScrollContainer" node_paths=PackedStringArray("item_rewards_container", "currency_rewards_label")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("7_7b3j3")
item_rewards_container = NodePath("RewardsContainer")
currency_rewards_label = NodePath("RewardsContainer/CurrencyRewardsLabel")

[node name="RewardsContainer" type="VBoxContainer" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/ScrollContainer/QuestRewardsDisplay"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("8_nr7bh")
item_display_scene_path = ExtResource("9_jin1d")

[node name="CurrencyRewardsLabel" type="Label" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/ScrollContainer/QuestRewardsDisplay/RewardsContainer"]
visible = false
layout_mode = 2
text = "0 gp"
horizontal_alignment = 1

[node name="ChooseQuestButton" type="Button" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "SPONSOR QUEST"

[node name="QuestStory" type="TextEdit" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
editable = false
metadata/_tab_index = 2

[node name="QuestCombatLog" type="TextEdit" parent="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
editable = false
metadata/_tab_index = 3

[connection signal="pressed" from="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestRewardPanel/VBoxContainer/VBoxContainer/CollectRewardsButton" to="." method="on_choose_quest_button_pressed"]
[connection signal="pressed" from="QuestProgressPanel/MarginContainer/ScrollContainer/VBoxContainer/QuestInfoTabContainer/QuestInfoPanel/MarginContainer/VBoxContainer/ChooseQuestButton" to="." method="on_choose_quest_button_pressed"]
